gallium/auxiliary: Prefer intrinsics to handrolled atomic ops for Linux (v2)

v2: enable it only for Linux at this moment, where we expected it's
    build for >= i486.

[1] https://bugs.freedesktop.org/show_bug.cgi?id=30514

Signed-off-by: David Heidelberger <david.heidelberger@ixit.cz>